// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPage renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    Main
    ):
    <span>
      Name
       - 
      Page 1
    </span>
    <h1
      class="MuiTypography-root MuiTypography-h5 css-1uxccsd-MuiTypography-root"
    >
      Welcome to Helpers
    </h1>
    <div>
      <a
        href="path1"
      >
        Page 1
      </a>
      <a
        href="path2"
      >
        Page 2
      </a>
    </div>
  </div>
</div>
`;

exports[`MainPage when got no pages renders successfully 1`] = `
<div>
  <div>
    Mocked Page Template (
    Main
    ):
    <span>
      Name
       - 
    </span>
    <h1
      class="MuiTypography-root MuiTypography-h5 css-1uxccsd-MuiTypography-root"
    >
      Welcome to Helpers
    </h1>
    <div />
  </div>
</div>
`;
